helloworld-v2/helloworld-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2
  labels:
    app: helloworld
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
      version: v2
  template:
    metadata:
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
      - name: istio-proxy
        image: auto
        resources:
          requests:
            cpu: 50m
            memory: 112Mi
        securityContext:
          allowPrivilegeEscalation: false
      - name: helloworld
        image: docker.io/istio/examples-helloworld-v2
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 200m
            memory: 400Mi
        securityContext:
          allowPrivilegeEscalation: false
