helloworld-v2/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworldv2
spec:
  gateways:
  - asm-oauth/userauth
  hosts:
  - 'hellov2.infra-auth.alpha.phac.gc.ca'
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: helloworld
        port:
          number: 5000
